--- a/src/contactNetConfig/modules/core/directives/cnAgentsBySupervisor/cnAgentsBySupervisor.html
+++ b/src/contactNetConfig/modules/core/directives/cnAgentsBySupervisor/cnAgentsBySupervisor.html
@@ -19,7 +19,7 @@
 				    placeholder="Selecciona los agentes disponibles para este supervisor">
 				  </md-contact-chips>
 				  <md-list class="fixedRows">
-				    <md-subheader class="md-no-sticky">Contacts</md-subheader>
+				    <md-subheader class="md-no-sticky">Agentes</md-subheader>
 				    <md-list-item class="md-2-line contact-item" ng-repeat="(index, contact) in agents"
 				        ng-if="filterAgents.indexOf(contact) < 0">
 				      <img ng-src="{{contact.thumbnail}}" class="md-avatar" alt="{{contact.name}}" />
