--- a/src/contactNetConfig/modules/core/directives/cnSupervisorsConfig/cnSupervisorsConfig.html
+++ b/src/contactNetConfig/modules/core/directives/cnSupervisorsConfig/cnSupervisorsConfig.html
@@ -1,5 +1,5 @@
 <div 
-	ng-repeat="(k,v) in contactnet.contactNetInfo.supervisors | limitTo:5" 
+	ng-repeat="(k,v) in contactnet.contactNetInfo.supervisors" 
 	class="chipsAgentsBySupervisors md-item md-whiteframe-z1"
 	ng-class="{'openInnerCard md-whiteframe-z3': agentCard.openCard}"
 	ng-open-card="agentCard"
