--- a/src/contactNetConfig/modules/contactNets/contactNets.html
+++ b/src/contactNetConfig/modules/contactNets/contactNets.html
@@ -4,7 +4,7 @@
 
 			<md-whiteframe class="md-whiteframe-z2 filterSearch" flex layout cn-scroll>
 				<div flex layout="row" layout-align="center center">
-					<md-icon md-svg-icon="search" aria-label="search" class="md-hue-3"></md-icon>
+					<md-icon md-svg-icon="search" aria-label="search"></md-icon>
 					<input type="text" ng-model="filterSearch.description" placeholder="Buscar" flex/>
 				</div>
 			</md-whiteframe>
@@ -73,6 +73,9 @@
 						</div>
 						<div ng-if="step == 2">
 							<div cn-supervisors-config contactnet="v" layout="column"></div>
+						</div>
+						<div ng-if="step == 3">
+							<div cn-contactnet-backoffice contactnet="v" layout="column"></div>
 						</div>
 
 						<div layout="row">
