--- a/src/contactNetConfig/modules/rules/rules.html
+++ b/src/contactNetConfig/modules/rules/rules.html
@@ -1,7 +1,7 @@
 <div id="sectionRules" class="cardsLayout" layout="row" layout-fill layout flex layout-align="center">
 
 	<section flex>
-    <md-whiteframe class="md-whiteframe-z2 filterSearch" flex layout cn-scroll>
+    <md-whiteframe class="filterSearch" flex layout cn-scroll>
       <div flex layout="row" layout-align="center center">
         <md-icon md-svg-icon="search" aria-label="search"></md-icon>
         <input type="text" ng-model="filterSearch.description" placeholder="Buscar" flex/>
