--- a/src/contactNetConfig/modules/contactNets/contactNets.html
+++ b/src/contactNetConfig/modules/contactNets/contactNets.html
@@ -2,7 +2,7 @@
 
 		<section flex>
 
-			<md-whiteframe class="md-whiteframe-z2 filterSearch" flex layout cn-scroll>
+			<md-whiteframe class="filterSearch" flex layout cn-scroll>
 				<div flex layout="row" layout-align="center center">
 					<md-icon md-svg-icon="search" aria-label="search"></md-icon>
 					<input type="text" ng-model="filterSearch.description" placeholder="Buscar" flex/>
