chore(contactnets, core)
- modify

--- a/src/contactNetConfig/modules/contactNets/directives/cnContactNetMailCardChannelConfiguration/cnContactNetMailCardChannelConfiguration.html
+++ b/src/contactNetConfig/modules/contactNets/directives/cnContactNetMailCardChannelConfiguration/cnContactNetMailCardChannelConfiguration.html
@@ -1,7 +1,7 @@
 <!-- <div class="md-item md-whiteframe-z1" ng-model="yo.openCard" ng-class="{'openInnerCard md-whiteframe-z3': yo.openCard}"> -->
 <!-- ng-click="cnContactNetVoiceCardChannelConfiguration.openCard = !cnContactNetVoiceCardChannelConfiguration.openCard" -->
 	<md-list-item class="item md-no-style md-clickable" aria-label="row" ng-click="ngModel.openCard = !ngModel.openCard" ng-class="{'disable-hover' : !contactnet.channels[3]}">
-		<md-icon md-svg-icon="message" aria-label="Open Mail" class="md-hue-3"></md-icon>
+		<md-icon md-svg-icon="mail" aria-label="Open Mail" class="md-hue-3"></md-icon>
 		<span layout-margin flex>Mail</span>
 		<md-switch class="md-secondary enable-hover" ng-model="contactnet.channels[3]" aria-label="Switch 1" ng-show="!ngModel.openCard">
 	  </md-switch>
