--- a/src/contactNetConfig/modules/rules/rules.html
+++ b/src/contactNetConfig/modules/rules/rules.html
@@ -64,7 +64,7 @@
 				      <md-input-container flex>
 				        <label>Canal</label>
 				        <md-select ng-model="v.channelId">
-				        	<md-option  value="1">Voz</md-option>
+				        	<!-- <md-option  value="1">Voz</md-option> -->
 				          <md-option  value="2">Chat</md-option>
 				          <md-option  value="3">Mail</md-option>
 				        </md-select>
